--- a/twitch.html
+++ b/twitch.html
@@ -13,6 +13,45 @@
     width="100px"
     height="100px">
     <h2>about me</h2>
+    <img src="ana.jpg" class="pic2" 
+    alt="ana"
+    width="200px"
+    height="250px">
+    <p class="intro"> Hi my name is douaa and im 20 years old from Morocco i like gaming and i stream as a hobby <br>
+    i got a nice comminuty that supports me and im certainly thankful to them ❤ <br>
+    </p>
+     <h3>what i stream:</h3>
+    <section class="gallery">
+        <figure class="item">
+            <img src="lol2.jpg" class="lol"
+            alt="lol"
+            width="50px"
+            height="50px">
+            <figcaption> League of legends</figcaption>
+        </figure>
+        <figure class="item">
+            <img src="jc.jpg" class="jc"
+            alt="jc"
+            width="70px"
+            height="60px">
+            <figcaption>just chatting</figcaption>
+        </figure>
+        <figure class="item">
+            <img src="irl.jpg" class="irl"
+            alt="irl"
+            width="50px"
+            height="50px">
+            <figcaption> In real life</figcaption>
+        </figure>
+
+    </section>
+    
+   
+
+    
+
+
+
    
 
 
