--- a/twitch.html
+++ b/twitch.html
@@ -8,18 +8,16 @@
 </head>
 <h1>Twitch portfolio</h1>
 <body>
-    <img src="https://images.seeklogo.com/logo-png/27/1/twitch-logo-png_seeklogo-274042.png" class="pic1"
-    alt="twitch-logo"
-    width="100px"
-    height="100px">
-    <h2>about me</h2>
-    <img src="ana.jpg" class="pic2" 
-    alt="ana"
-    width="200px"
-    height="250px">
+   <div class="leftsection">
+   <h2> about me</h2>
     <p class="intro"> Hi my name is douaa and im 20 years old from Morocco i like gaming and i stream as a hobby <br>
     i got a nice comminuty that supports me and im certainly thankful to them ❤ <br>
-    </p>
+     </p>
+   </div>
+   <div class="me">
+    <img class="ana" src="ana.jpg">
+   </div>
+    </section>
      <h3>what i stream:</h3>
     <section class="gallery">
         <figure class="item">
@@ -45,17 +43,17 @@
         </figure>
 
     </section>
-    
-   
+    <footer>
+        <section class="kuro">
+            <figure class="item2">
+                <img src="Kuromi Gif Icon.gif" class="kuro"
+                alt="kuro"
+                width="50px"
+                height="50px">
+                <figcaption>kuromi-chan says hi✨</figcaption>
+            </figure>
 
-    
-
-
-
-   
-
-
-
-
+        </section>
+    </footer>
 </body>
 </html>
